# sdsolution

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  localstack-script.sh  pyproject.toml
tests/: conftest.py
tests/api/routers/: test_weather.py
weather_service/: config.py  main.py
weather_service/api/clients/: dynamodb.py  s3.py  weatherapi.py
weather_service/api/routers/: weather.py
